Add javascript permutation solution.

--- a/arrays_strings/permutation/permutation_solution.ipynb
+++ b/arrays_strings/permutation/permutation_solution.ipynb
@@ -91,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Permutations(object):\n",
@@ -142,9 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -176,9 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -225,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -241,27 +233,127 @@
    "source": [
     "run -i test_permutation_solution.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testPermutation\n",
+      "Success: testPermutation\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load permutation.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Permutations {\n",
+    "\n",
+    "  isPermutation(str1, str2) {\n",
+    "    if (typeof str1 !== 'string' || !str1 || typeof str2 !== 'string' || !str2) {\n",
+    "      return false;\n",
+    "    }\n",
+    "    return [...str1].sort().join() === [...str2].sort().join();\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class PermutationsAlt {\n",
+    "\n",
+    "  isPermutation(str1, str2) {\n",
+    "    if (typeof str1 !== 'string' || !str1 || typeof str2 !== 'string' || !str2) {\n",
+    "      return false;\n",
+    "    }\n",
+    "    if (str1.length !== str2.length) {\n",
+    "      return false;\n",
+    "    }\n",
+    "    const uniqueCount1 = new Map();\n",
+    "    const uniqueCount2 = new Map();\n",
+    "    for (let idx in str1) {\n",
+    "      if (uniqueCount1.has(str1[idx])) {\n",
+    "        uniqueCount1.set(str1[idx], uniqueCount1.get(str1[idx] + 1));\n",
+    "      } else {\n",
+    "        uniqueCount1.set(str1[idx], 1);\n",
+    "      }\n",
+    "\n",
+    "    }\n",
+    "    for (let idx in str2) {\n",
+    "      if (uniqueCount2.has(str2[idx])) {\n",
+    "        uniqueCount2.set(str2[idx], uniqueCount2.get(str2[idx] + 1));\n",
+    "      } else {\n",
+    "        uniqueCount2.set(str2[idx], 1);\n",
+    "      }\n",
+    "    }\n",
+    "    const comp1 = this.convertMapToSortedString(uniqueCount1);\n",
+    "    const comp2 = this.convertMapToSortedString(uniqueCount2);\n",
+    "    return comp1 === comp2;\n",
+    "  }\n",
+    "\n",
+    "  convertMapToSortedString(m) {\n",
+    "    let result = '';\n",
+    "    const sortedMapEntries = [...m].sort((a, b) => {\n",
+    "      return a[0].charCodeAt(0) - b[0].charCodeAt(0);\n",
+    "    });\n",
+    "    sortedMapEntries.forEach(i => result += i.join(''));\n",
+    "    return result;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestPermutation {\n",
+    "\n",
+    "  testPermutation(permutations) {\n",
+    "    assert.equal(permutations.isPermutation(null, 'foo'), false);\n",
+    "    assert.equal(permutations.isPermutation('', 'foo'), false);\n",
+    "    assert.equal(permutations.isPermutation('Nib', 'bin'), false);\n",
+    "    assert.equal(permutations.isPermutation('act', 'cat'), true);\n",
+    "    assert.equal(permutations.isPermutation('a ct', 'ca t'), true);\n",
+    "    assert.equal(permutations.isPermutation('dog', 'doggo'), false);\n",
+    "    console.log('Success: testPermutation');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestPermutation();\n",
+    "  const permutations = new Permutations();\n",
+    "  const permutationsAlt = new PermutationsAlt();\n",
+    "  test.testPermutation(permutations);\n",
+    "  test.testPermutation(permutationsAlt);\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
