Add javascript fibonacci solution.

--- a/stacks_queues/stack/stack_solution.ipynb
+++ b/stacks_queues/stack/stack_solution.ipynb
@@ -302,25 +302,123 @@
    "source": [
     "## NodeJS Code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: empty stack\n",
+      "Test: one element\n",
+      "Test: more than one element\n",
+      "Success: testStackEndToEnd\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load stack.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Node {\n",
+    "\n",
+    "  constructor(data, next=null) {\n",
+    "    this.data = data;\n",
+    "    this.next = next;\n",
+    "  }\n",
+    "}\n",
+    "class Stack {\n",
+    "\n",
+    "  constructor(top=null) {\n",
+    "    this.top = top;\n",
+    "  }\n",
+    "\n",
+    "  push(data) {\n",
+    "    this.top = new Node(data, this.top);\n",
+    "  }\n",
+    "\n",
+    "  pop() {\n",
+    "    if (!this.top) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    const data = this.top.data;\n",
+    "    this.top = this.top.next;\n",
+    "    return data;\n",
+    "  }\n",
+    "\n",
+    "  peek() {\n",
+    "    if (!this.top) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    return this.top.data;\n",
+    "  }\n",
+    "\n",
+    "  isEmpty() {\n",
+    "    return this.peek() == null;\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestStack {\n",
+    "\n",
+    "  testStackEndToEnd() {\n",
+    "    console.log('Test: empty stack');\n",
+    "    let stack = new Stack();\n",
+    "    assert.equal(stack.peek(), null);\n",
+    "    assert.equal(stack.pop(), null);\n",
+    "\n",
+    "    console.log('Test: one element');\n",
+    "    const top = new Node(5);\n",
+    "    stack = new Stack(top);\n",
+    "    assert.equal(stack.pop(), 5);\n",
+    "    assert.equal(stack.peek(), null);\n",
+    "\n",
+    "    console.log('Test: more than one element');\n",
+    "    stack = new Stack();\n",
+    "    stack.push(1);\n",
+    "    stack.push(2);\n",
+    "    stack.push(3);\n",
+    "    assert.equal(stack.pop(), 3);\n",
+    "    assert.equal(stack.peek(), 2);\n",
+    "    assert.equal(stack.pop(), 2);\n",
+    "    assert.equal(stack.peek(), 1);\n",
+    "    assert.equal(stack.isEmpty(), false);\n",
+    "    assert.equal(stack.pop(), 1);\n",
+    "    assert.equal(stack.peek(), null);\n",
+    "    assert.equal(stack.isEmpty(), true);\n",
+    "\n",
+    "    console.log('Success: testStackEndToEnd');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestStack();\n",
+    "  test.testStackEndToEnd();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
