--- a/arrays_strings/unique_chars/unique_chars_solution.ipynb
+++ b/arrays_strings/unique_chars/unique_chars_solution.ipynb
@@ -283,13 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testUniqueChars\n",
+      "Success: testUniqueChars\n",
+      "Success: testUniqueChars\n"
+     ]
+    }
+   ],
    "source": [
-    "# %load uniqueChars.js\n",
+    "//# %load uniqueChars.js\n",
     "const assert = require('assert');\n",
     "\n",
     "class UniqueCharsSet {\n",
@@ -376,21 +384,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
