Add javascript solution for coin change.

--- a/recursion_dynamic/fibonacci/fibonacci_solution.ipynb
+++ b/recursion_dynamic/fibonacci/fibonacci_solution.ipynb
@@ -181,25 +181,131 @@
    "source": [
     "%run -i test_fibonacci.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test: iterative\n",
+      "Success: testfibiterative\n",
+      "Test: recursive\n",
+      "Success: testfibiterative\n",
+      "Test: dynamic\n",
+      "Success: testfibiterative\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load fibonacci.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Fib {\n",
+    "\n",
+    "  * fibIterative(n) {\n",
+    "    let a = 0, b = 1;\n",
+    "    const infinite = !n && n !== 0;\n",
+    "    while (infinite || n--) {\n",
+    "      yield a;\n",
+    "      [a, b] = [b, a + b];\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  fibRecursive(n) {\n",
+    "    if (n === 0 || n === 1) {\n",
+    "      return n;\n",
+    "    } else {\n",
+    "      return this.fibRecursive(n-1) + this.fibRecursive(n-2);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  fibDynamic(n) {\n",
+    "    const cache = {};\n",
+    "    return this._fibDynamic(n, cache);\n",
+    "  }\n",
+    "\n",
+    "  _fibDynamic(n, cache) {\n",
+    "    if (n === 0 || n === 1) {\n",
+    "      return n;\n",
+    "    }\n",
+    "    if (n in cache) {\n",
+    "      return cache[n];\n",
+    "    }\n",
+    "    cache[n] = this._fibDynamic(n-1, cache) + this._fibDynamic(n-2, cache);\n",
+    "    return cache[n];\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestFib {\n",
+    "\n",
+    "  testFibIterative() {\n",
+    "    const fib = new Fib();\n",
+    "    const expected = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34];\n",
+    "    console.log('Test: iterative');\n",
+    "    assert.deepEqual([...fib.fibIterative(10)], expected);\n",
+    "    console.log('Success: testfibiterative');\n",
+    "  }\n",
+    "\n",
+    "  testFibRecursive() {\n",
+    "    const fib = new Fib();\n",
+    "    const expected = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34];\n",
+    "    const result = [];\n",
+    "    console.log('Test: recursive');\n",
+    "    [...Array(10).keys()].forEach(i => result.push(fib.fibRecursive(i)));\n",
+    "    assert.deepEqual(result, expected);\n",
+    "    console.log('Success: testfibiterative');\n",
+    "  }\n",
+    "\n",
+    "  testFibDynamic() {\n",
+    "    const fib = new Fib();\n",
+    "    const expected = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34];\n",
+    "    const result = [];\n",
+    "    console.log('Test: dynamic');\n",
+    "    [...Array(10).keys()].forEach(i => result.push(fib.fibDynamic(i)));\n",
+    "    assert.deepEqual(result, expected);\n",
+    "    console.log('Success: testfibiterative');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestFib();\n",
+    "  test.testFibIterative();\n",
+    "  test.testFibRecursive();\n",
+    "  test.testFibDynamic();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
