--- a/recursion_dynamic/coin_change/coin_change_solution.ipynb
+++ b/recursion_dynamic/coin_change/coin_change_solution.ipynb
@@ -150,9 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -189,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -204,27 +200,104 @@
    "source": [
     "%run -i test_coin_change.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testCoinchanger\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load coinChange.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class CoinChanger {\n",
+    "\n",
+    "  makeChange(coins, total) {\n",
+    "    if (!(coins instanceof Array) || total === null || total === undefined) {\n",
+    "      return null;\n",
+    "    }\n",
+    "    if (coins.length < 1 || total === 0) {\n",
+    "      return 0;\n",
+    "    }\n",
+    "    coins = [0].concat(coins);\n",
+    "    const numRows = coins.length;\n",
+    "    const numCols = total + 1;\n",
+    "    const T = [...Array(numRows).keys()].map(() => Array(numCols));\n",
+    "    for (let i = 0; i < numRows; i++) {\n",
+    "      for (let j = 0; j < numCols; j++) {\n",
+    "        if (i === 0) {\n",
+    "          T[i][j] = 0;\n",
+    "          continue;\n",
+    "        }\n",
+    "        if (j === 0) {\n",
+    "          T[i][j] = 1;\n",
+    "          continue;\n",
+    "        }\n",
+    "        if (coins[i] <= j) {\n",
+    "          T[i][j] = T[i - 1][j] + T[i][j - coins[i]];\n",
+    "        } else {\n",
+    "          T[i][j] = T[i - 1][j];\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "    return T[numRows - 1][numCols - 1];\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestCoinChanger {\n",
+    "\n",
+    "  testCoinChanger() {\n",
+    "    const coinChanger = new CoinChanger();\n",
+    "    assert.equal(coinChanger.makeChange([1, 2], 0), 0);\n",
+    "    assert.equal(coinChanger.makeChange([1, 2, 3], 5), 5);\n",
+    "    assert.equal(coinChanger.makeChange([1, 5, 25, 50], 10), 3);\n",
+    "    console.log('Success: testCoinchanger');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestCoinChanger();\n",
+    "  test.testCoinChanger();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
