--- a/recursion_dynamic/coin_change/coin_change_solution.ipynb
+++ b/recursion_dynamic/coin_change/coin_change_solution.ipynb
@@ -85,7 +85,7 @@
     "    T[i][j] = 1\n",
     "if row == 0:\n",
     "    T[i][j] = 0\n",
-    "if coins[i] >= j\n",
+    "if coins[i] <= j\n",
     "    T[i][j] = T[i - 1][j] + T[i][j - coins[i]]\n",
     "else:\n",
     "    T[i][j] = T[i - 1][j]\n",
