--- a/recursion_dynamic/coin_change_min/coin_change_min_solution.ipynb
+++ b/recursion_dynamic/coin_change_min/coin_change_min_solution.ipynb
@@ -116,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -160,9 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -201,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -216,27 +210,108 @@
    "source": [
     "%run -i test_coin_change_min.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testMakechange\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load coinChangeMin.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class CoinChanger {\n",
+    "\n",
+    "  makeChange(coins, total) {\n",
+    "    if (coins === undefined || coins === null ||\n",
+    "        total === undefined || total === null) {\n",
+    "      throw new TypeError('coins or total cannot be null.');\n",
+    "    }\n",
+    "    if (coins.length === 0 || total === 0) {\n",
+    "      return 0;\n",
+    "    }\n",
+    "    const cache = {};\n",
+    "    return this._makeChange(coins, total, cache);\n",
+    "  }\n",
+    "\n",
+    "  _makeChange(coins, total, cache) {\n",
+    "    if (total === 0) {\n",
+    "      return 0;\n",
+    "    }\n",
+    "    if (total in cache) {\n",
+    "      return cache[total];\n",
+    "    }\n",
+    "    let minWays = Number.MAX_VALUE;\n",
+    "    for (let i =0; i < coins.length; i++) {\n",
+    "      if (total - coins[i] < 0) {\n",
+    "        continue;\n",
+    "      }\n",
+    "      const ways = this._makeChange(coins, total - coins[i], cache);\n",
+    "      if (ways < minWays) {\n",
+    "        minWays = ways;\n",
+    "      }\n",
+    "    }\n",
+    "    cache[total] = minWays + 1;\n",
+    "    return cache[total];\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestCoinChanger {\n",
+    "\n",
+    "  testMakeChange() {\n",
+    "    const coinChanger = new CoinChanger();\n",
+    "    assert.throws(() => coinChanger.makeChange(null, null), TypeError);\n",
+    "    assert.equal(coinChanger.makeChange([], 0), 0);\n",
+    "    assert.equal(coinChanger.makeChange([1, 2, 3], 5), 2);\n",
+    "    assert.equal(coinChanger.makeChange([3, 2, 1], 5), 2);\n",
+    "    assert.equal(coinChanger.makeChange([3, 2, 1], 8), 3);\n",
+    "    console.log('Success: testMakechange');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestCoinChanger();\n",
+    "  test.testMakeChange();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
