Add javascript solution for bst second largest.

--- a/graphs_trees/bst/bst_solution.ipynb
+++ b/graphs_trees/bst/bst_solution.ipynb
@@ -267,25 +267,154 @@
    "source": [
     "%run -i test_bst.py"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NodeJS Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: testTree1\n",
+      "Success: testTree2\n"
+     ]
+    }
+   ],
+   "source": [
+    "//# %load bst.js\n",
+    "const assert = require('assert');\n",
+    "\n",
+    "class Node {\n",
+    "\n",
+    "  constructor(data) {\n",
+    "    this.data = data;\n",
+    "    this.left = null;\n",
+    "    this.right = null;\n",
+    "    this.parent = null;\n",
+    "  }\n",
+    "\n",
+    "  toString() {\n",
+    "    return String(this.data);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class Bst {\n",
+    "\n",
+    "  constructor(root = null) {\n",
+    "    this.root = root;\n",
+    "  }\n",
+    "\n",
+    "  insert(data) {\n",
+    "    if (data === null) {\n",
+    "      throw new TypeError('data cannot be null');\n",
+    "    }\n",
+    "    if (this.root === null) {\n",
+    "      this.root = new Node(data);\n",
+    "      return this.root;\n",
+    "    } else {\n",
+    "      return this._insert(this.root, data);\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  _insert(node, data) {\n",
+    "    if (node === null) {\n",
+    "      return new Node(data);\n",
+    "    }\n",
+    "    if (data <= node.data) {\n",
+    "      if (node.left === null) {\n",
+    "        node.left = this._insert(node.left, data);\n",
+    "        node.left.parent = node;\n",
+    "        return node.left;\n",
+    "      } else {\n",
+    "        return this._insert(node.left, data);\n",
+    "      }\n",
+    "    } else {\n",
+    "      if (node.right === null) {\n",
+    "        node.right = this._insert(node.right, data);\n",
+    "        node.right.parent = node;\n",
+    "        return node.right;\n",
+    "      } else {\n",
+    "        return this._insert(node.right, data);\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  printValue() {\n",
+    "    const result = [];\n",
+    "    this._printValue(this.root, result);\n",
+    "    return `[${result.join(', ')}]`;\n",
+    "  }\n",
+    "\n",
+    "  _printValue(node, result) {\n",
+    "    if (node !== null) {\n",
+    "      this._printValue(node.left, result);\n",
+    "      result.push(node.data);\n",
+    "      this._printValue(node.right, result);\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "class TestBst {\n",
+    "\n",
+    "  testTree1() {\n",
+    "    const bst = new Bst();\n",
+    "    bst.insert(5);\n",
+    "    bst.insert(2);\n",
+    "    bst.insert(8);\n",
+    "    bst.insert(1);\n",
+    "    bst.insert(3);\n",
+    "    assert.equal(bst.printValue(), '[1, 2, 3, 5, 8]');\n",
+    "    console.log('Success: testTree1');\n",
+    "  }\n",
+    "\n",
+    "  testTree2() {\n",
+    "    const bst = new Bst();\n",
+    "    bst.insert(1);\n",
+    "    bst.insert(2);\n",
+    "    bst.insert(3);\n",
+    "    bst.insert(4);\n",
+    "    bst.insert(5);\n",
+    "    assert.equal(bst.printValue(), '[1, 2, 3, 4, 5]');\n",
+    "    console.log('Success: testTree2');\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "function main() {\n",
+    "  const test = new TestBst();\n",
+    "  test.testTree1();\n",
+    "  test.testTree2();\n",
+    "}\n",
+    "main();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Javascript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.12.0"
   }
  },
  "nbformat": 4,
